--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "stream-chat": "^3.13.1",
+    "stream-chat-react": "^6.12.0",
     "typescript": "^4.5.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
